--- a/src/index.html
+++ b/src/index.html
@@ -9,3 +9,9 @@
 </header>
 
 <my-app>loading</my-app>
+
+<footer>
+  <div class="icon-grid">
+    <a href="https://www.linkedin.com/in/eric-feldberg-62a758297" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/512px-LinkedIn_logo_initials.png"></a>
+  </div>
+</footer>
