--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,7 @@
-<header>
-  <div class="fat-arrow">
-    <span>( ) =</span>
-    <span class="caret">&#62;</span>
-  </div>
-  <a href="https://frontenddevelopment.tech/" target="_blank"
-    >frontenddevelopment.tech</a
-  >
-</header>
-
 <my-app>loading</my-app>
+
+<footer>
+  <a href="https://tinyurl.com/3m5hyrk5" target="_blank"
+    >CMSs, E-Commerce Tools, & Website Builders Explained</a
+  >
+</footer>
